--- a/testmanifest_v3.json
+++ b/testmanifest_v3.json
@@ -1,8 +1,8 @@
 {
-    "id": "https://j-images.ch/iiif-av/test1/manifest.json",
+    "id": "https://nbtkmy.github.io/iiif_av_test/testmanifest_v3.json",
     "type": "Manifest",
     "label": "One video file on one canvas",
-    "description": "a simple example with a single video-data",
+    "description": "a simple example with a single mp4-data",
     "sequences": {
         "type": "Sequence",
         "canvases": [
@@ -21,8 +21,8 @@
                                 "type": "Annotation",
                                 "motivation": "painting",
                                 "body": {
-                                    "id": "https://NbtKmy.github.io/iiif_av_test/Tiger_nemu.mp4",
-                                    "type": "VideTo",
+                                    "id": "https://nbtkmy.github.io/iiif_av_test/Tiger_nemu.mp4",
+                                    "type": "Video",
                                     "format": "video/mp4",
                                     "width": 1280,
                                     "height": 720,
