--- a/testmanifest_v3.json
+++ b/testmanifest_v3.json
@@ -5,35 +5,30 @@
     "description": "a simple example with a single mp4-data",
     "sequences": {
         "type": "Sequence",
-        "canvases": [
-            {
-                "id": "https://j-images.ch/iiif-av/test1/canvas/1",
-                "width": 1280,
-                "height": 720,
-                "duration": 42,
-                "content": [
-                    {
-                        "id": "https://j-images.ch/iiif-av/test1/content/page/1",
-                        "type": "AnnotationPage",
-                        "items": [
-                            {
-                                "id": "https://j-images.ch/iiif-av/test1/content/anno/1",
-                                "type": "Annotation",
-                                "motivation": "painting",
-                                "body": {
-                                    "id": "https://nbtkmy.github.io/iiif_av_test/Tiger_nemu.mp4",
-                                    "type": "Video",
-                                    "format": "video/mp4",
-                                    "width": 1280,
-                                    "height": 720,
-                                    "duration": 42
-                                },
-                                "target": "https://j-images.ch/iiif-av/test1/canvas/1#xywh=0,0,1280,720&t=0,42"
-                            }
-                        ]
-                    }
-                ]
+        "canvases": {
+            "id": "https://nbtkmy.github.io/iiif_av_test/canvas/1",
+            "type": "Canvas",
+            "width": 1280,
+            "height": 720,
+            "duration": 42,
+            "content": {
+                "id": "https://nbtkmy.github.io/iiif_av_test/annopage/1",
+                "type": "AnnotationPage",
+                "items": {
+                    "id": "https://nbtkmy.github.io/iiif_av_test/anno/1",
+                    "type": "Annotation",
+                    "motivation": "painting",
+                    "body": {
+                        "id": "https://nbtkmy.github.io/iiif_av_test/Tiger_nemu.mp4",
+                        "type": "Video",
+                        "format": "video/mp4",
+                        "width": 1280,
+                        "height": 720,
+                        "duration": 42
+                    },
+                    "target": "https://nbtkmy.github.io/iiif_av_test/canvas/1#xywh=0,0,1280,720&t=0,42"
+                }
             }
-        ]
+        }
     }
 }
