--- a/testmanifest_v3.json
+++ b/testmanifest_v3.json
@@ -11,24 +11,28 @@
             "width": 1280,
             "height": 720,
             "duration": 42,
-            "content": {
-                "id": "https://nbtkmy.github.io/iiif_av_test/annopage/1",
-                "type": "AnnotationPage",
-                "items": {
-                    "id": "https://nbtkmy.github.io/iiif_av_test/anno/1",
-                    "type": "Annotation",
-                    "motivation": "painting",
-                    "body": {
-                        "id": "https://nbtkmy.github.io/iiif_av_test/Tiger_nemu.mp4",
-                        "type": "Video",
-                        "format": "video/mp4",
-                        "width": 1280,
-                        "height": 720,
-                        "duration": 42
-                    },
-                    "target": "https://nbtkmy.github.io/iiif_av_test/canvas/1#xywh=0,0,1280,720&t=0,42"
+            "content": [
+                {
+                    "id": "https://nbtkmy.github.io/iiif_av_test/annopage/1",
+                    "type": "AnnotationPage",
+                    "items": [
+                        {
+                            "id": "https://nbtkmy.github.io/iiif_av_test/anno/1",
+                            "type": "Annotation",
+                            "motivation": "painting",
+                            "body": {
+                                "id": "https://nbtkmy.github.io/iiif_av_test/Tiger_nemu.mp4",
+                                "type": "Video",
+                                "format": "video/mp4",
+                                "width": 1280,
+                                "height": 720,
+                                "duration": 42
+                            },
+                            "target": "https://nbtkmy.github.io/iiif_av_test/canvas/1"
+                        }
+                    ]
                 }
-            }
+            ]
         }
     }
 }
