--- a/testmanifest_v3.json
+++ b/testmanifest_v3.json
@@ -3,36 +3,40 @@
     "type": "Manifest",
     "label": "One video file on one canvas",
     "description": "a simple example with a single mp4-data",
-    "sequences": {
-        "type": "Sequence",
-        "canvases": {
-            "id": "https://nbtkmy.github.io/iiif_av_test/canvas/1",
-            "type": "Canvas",
-            "width": 1280,
-            "height": 720,
-            "duration": 42,
-            "content": [
+    "sequences": [
+        {
+            "type": "Sequence",
+            "canvases": [
                 {
-                    "id": "https://nbtkmy.github.io/iiif_av_test/annopage/1",
-                    "type": "AnnotationPage",
-                    "items": [
+                    "id": "https://nbtkmy.github.io/iiif_av_test/canvas/1",
+                    "type": "Canvas",
+                    "width": 1280,
+                    "height": 720,
+                    "duration": 42,
+                    "content": [
                         {
-                            "id": "https://nbtkmy.github.io/iiif_av_test/anno/1",
-                            "type": "Annotation",
-                            "motivation": "painting",
-                            "body": {
-                                "id": "https://nbtkmy.github.io/iiif_av_test/Tiger_nemu.mp4",
-                                "type": "Video",
-                                "format": "video/mp4",
-                                "width": 1280,
-                                "height": 720,
-                                "duration": 42
-                            },
-                            "target": "https://nbtkmy.github.io/iiif_av_test/canvas/1"
+                            "id": "https://nbtkmy.github.io/iiif_av_test/annopage/1",
+                            "type": "AnnotationPage",
+                            "items": [
+                                {
+                                    "id": "https://nbtkmy.github.io/iiif_av_test/anno/1",
+                                    "type": "Annotation",
+                                    "motivation": "painting",
+                                    "body": {
+                                        "id": "https://nbtkmy.github.io/iiif_av_test/Tiger_nemu.mp4",
+                                        "type": "Video",
+                                        "format": "video/mp4",
+                                        "width": 1280,
+                                        "height": 720,
+                                        "duration": 42
+                                    },
+                                    "target": "https://nbtkmy.github.io/iiif_av_test/canvas/1"
+                                }
+                            ]
                         }
                     ]
                 }
             ]
         }
-    }
+    ]
 }
