--- a/testmanifest_v3.json
+++ b/testmanifest_v3.json
@@ -1,4 +1,8 @@
 {
+    "@context":[
+      "http://www.w3.org/ns/anno.jsonld",
+      "http://iiif.io/api/presentation/3/context.json"
+    ],
     "id": "https://nbtkmy.github.io/iiif_av_test/testmanifest_v3.json",
     "type": "Manifest",
     "label": "One video file on one canvas",
@@ -40,3 +44,4 @@
         }
     ]
 }
+
